--- a/index.html
+++ b/index.html
@@ -143,37 +143,51 @@
      <p id="home-subtitle" style="color: #4a0e0e; font-size: 20px; margin-bottom: 32px;">Giải pháp quản lý thời khóa biểu thông minh dành cho học sinh</p><button class="nav-button" id="btn-learn-more" style="background: white; color: #667eea; font-size: 18px; padding: 16px 32px;">Tìm hiểu thêm</button>
     </div>
    </div>
-   <div style="max-width: 1200px; margin: 0 auto; padding: 64px 24px;"><!-- Features Section with cute icons -->
+   <div style="max-width: 1400px; margin: 0 auto; padding: 48px 32px;"><!-- Features Section with cute icons -->
     <div style="margin-bottom: 80px;">
      <h2 class="section-title" style="text-align: center; margin-bottom: 48px;">✨ Tính năng nổi bật ✨</h2>
-     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 32px; margin-bottom: 48px;"><!-- Feature 1 -->
-      <div class="card" style="padding: 32px; text-align: center;">
+     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 24px; margin-bottom: 48px; max-width: 1400px; margin-left: auto; margin-right: auto;"><!-- Feature 1 -->
+      <div class="card" style="padding: 24px; text-align: center; min-height: 200px; display: flex; flex-direction: column; justify-content: center;">
        <div style="font-size: 48px; margin-bottom: 16px;">
         📱
        </div>
        <h3 style="font-size: 20px; font-weight: 700; color: #1a202c; margin-bottom: 12px;">Tra cứu nhanh</h3>
        <p style="color: #718096; line-height: 1.6;">Xem thời khóa biểu mọi lúc mọi nơi, chỉ cần một cú click!</p>
       </div><!-- Feature 2 -->
-      <div class="card" style="padding: 32px; text-align: center;">
+      <div class="card" style="padding: 24px; text-align: center; min-height: 200px; display: flex; flex-direction: column; justify-content: center;">
        <div style="font-size: 48px; margin-bottom: 16px;">
         🎨
        </div>
        <h3 style="font-size: 20px; font-weight: 700; color: #1a202c; margin-bottom: 12px;">Cá nhân hóa</h3>
        <p style="color: #718096; line-height: 1.6;">Tùy chỉnh giao diện theo sở thích riêng của bạn!</p>
       </div><!-- Feature 3 -->
-      <div class="card" style="padding: 32px; text-align: center;">
+      <div class="card" style="padding: 24px; text-align: center; min-height: 200px; display: flex; flex-direction: column; justify-content: center;">
        <div style="font-size: 48px; margin-bottom: 16px;">
         📸
        </div>
        <h3 style="font-size: 20px; font-weight: 700; color: #1a202c; margin-bottom: 12px;">Xuất ảnh</h3>
        <p style="color: #718096; line-height: 1.6;">Lưu thời khóa biểu thành hình nền điện thoại siêu tiện lợi!</p>
       </div><!-- Feature 4 -->
-      <div class="card" style="padding: 32px; text-align: center;">
+      <div class="card" style="padding: 24px; text-align: center; min-height: 200px; display: flex; flex-direction: column; justify-content: center;">
        <div style="font-size: 48px; margin-bottom: 16px;">
         ⏰
        </div>
        <h3 style="font-size: 20px; font-weight: 700; color: #1a202c; margin-bottom: 12px;">Quản lý thời gian</h3>
        <p style="color: #718096; line-height: 1.6;">Phân bổ thời gian học tập hợp lý, cải thiện hiệu quả học tập!</p>
+      </div><!-- Feature 5 -->
+      <div class="card" style="padding: 24px; text-align: center; min-height: 200px; display: flex; flex-direction: column; justify-content: center;">
+       <div style="font-size: 48px; margin-bottom: 16px;">
+        🔄
+       </div>
+       <h3 style="font-size: 20px; font-weight: 700; color: #1a202c; margin-bottom: 12px;">Đồng bộ toàn trường</h3>
+       <p style="color: #718096; line-height: 1.6;">Cập nhật thời khóa biểu chung toàn trường theo thời gian thực, đảm bảo thông tin luôn chính xác!</p>
+      </div><!-- Feature 6 -->
+      <div class="card" style="padding: 24px; text-align: center; min-height: 200px; display: flex; flex-direction: column; justify-content: center;">
+       <div style="font-size: 48px; margin-bottom: 16px;">
+        🔒
+       </div>
+       <h3 style="font-size: 20px; font-weight: 700; color: #1a202c; margin-bottom: 12px;">Quyền riêng tư</h3>
+       <p style="color: #718096; line-height: 1.6;">Bảo vệ thông tin cá nhân tuyệt đối - lịch của bạn chỉ bạn mới thấy được!</p>
       </div>
      </div><!-- Decorative elements -->
      <div style="text-align: center; margin: 48px 0;">
@@ -181,8 +195,8 @@
       </div>
      </div>
     </div><!-- About Us Section -->
-    <div style="background: #f8fafc; padding: 64px 24px;">
-     <div style="max-width: 900px; margin: 0 auto;">
+    <div style="background: #f8fafc; padding: 48px 32px; border-radius: 16px; margin: 0 -32px;">
+     <div style="max-width: 1000px; margin: 0 auto;">
       <h2 class="section-title" style="text-align: center; margin-bottom: 48px;">About Us</h2>
       <div class="card" style="padding: 40px;">
        <div style="text-align: center; margin-bottom: 32px;">
@@ -338,5 +352,5 @@
       });
     }
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9978e6e104fac7d2',t:'MTc2MTk3Mzk5Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9978f2fc251dc7d2',t:'MTc2MTk3NDQ5MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
