--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
    <div style="padding: 80px 24px; text-align: center;">
     <div style="max-width: 800px; margin: 0 auto;">
      <h1 id="home-title" style="color: #8b0000; font-size: 48px; font-weight: 900; margin-bottom: 16px; line-height: 1.2; text-shadow: 2px 2px 4px rgba(255,255,255,0.8); text-transform: uppercase; letter-spacing: 1px;">Thời gian biểu mini</h1>
-     <p id="home-subtitle" style="color: #4a0e0e; font-size: 20px; margin-bottom: 32px;">Giải pháp quản lý thời khóa biểu thông minh dành cho học sinh</p><button class="nav-button" id="btn-learn-more" style="background: white; color: #667eea; font-size: 18px; padding: 16px 32px;">Tìm hiểu thêm</button>
+     <p id="home-subtitle" style="color: #4a0e0e; font-size: 20px; margin-bottom: 32px;">Giải pháp quản lý thời khóa biểu thông minh dành cho học sinh</p>
     </div>
    </div>
    <div style="max-width: 1400px; margin: 0 auto; padding: 0 32px 48px 32px;"><!-- Decorative Divider -->
@@ -271,9 +271,16 @@
           📧
          </div>
          <p style="color: #2d3748; font-size: 14px; margin: 0; font-weight: 500;">Liên hệ với chúng tôi để được hỗ trợ hoặc đóng góp ý kiến</p>
+        </div><!-- Copyright -->
+        <div style="text-align: center; margin-top: 24px; padding: 16px; border-top: 1px solid #e2e8f0;">
+         <p style="color: #718096; font-size: 12px; margin: 0; line-height: 1.5;">© 2025 Trường THPT Nguyễn Khuyến. Phát triển bởi nhóm nghiên cứu học sinh.</p>
         </div>
        </div>
       </div>
+     </div>
+    </div><!-- Action Buttons at bottom -->
+    <div style="text-align: center; padding: 48px 24px;">
+     <div style="display: flex; flex-direction: column; gap: 16px; align-items: center; max-width: 600px; margin: 0 auto;"><button class="nav-button" id="btn-learn-more" style="background: white; color: #667eea; font-size: 18px; padding: 16px 32px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">Cùng nhau tìm hiểu phần mềm này nhé!</button> <a href="https://nckhthptnk.github.io/minitkb/" target="_blank" rel="noopener noreferrer" class="nav-button" style="background: white; color: #667eea; font-size: 18px; padding: 16px 32px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-decoration: none; display: inline-block;">Ấn vào đây để trải nghiệm phần mềm cùng chúng mình</a>
      </div>
     </div>
    </div>
@@ -392,5 +399,5 @@
       });
     }
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'997911dac553c7d2',t:'MTc2MTk3NTc1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9979214361cfc7d2',t:'MTc2MTk3NjM4Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
