--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
      </div>
     </div><!-- Action Buttons -->
     <div style="text-align: center; padding: 48px 24px;">
-     <div style="display: flex; flex-direction: column; gap: 16px; align-items: center; max-width: 600px; margin: 0 auto;"><button class="nav-button" id="btn-learn-more" style="background: white; color: #667eea; font-size: 18px; padding: 16px 32px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">Cùng nhau tìm hiểu phần mềm này nhé!</button> <a href="https://nckhthptnk.github.io/minitkb/" target="_blank" rel="noopener noreferrer" class="nav-button" style="background: white; color: #667eea; font-size: 18px; padding: 16px 32px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-decoration: none; display: inline-block;">Ấn vào đây để trải nghiệm phần mềm cùng chúng mình</a>
+     <div style="display: flex; flex-direction: column; gap: 16px; align-items: center; max-width: 600px; margin: 0 auto;"><a href="https://nckhthptnk.github.io/minitkb/" target="_blank" rel="noopener noreferrer" class="nav-button" style="background: white; color: #667eea; font-size: 18px; padding: 16px 32px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-decoration: none; display: inline-block;">Ấn vào đây để trải nghiệm phần mềm cùng chúng mình nhé!</a>
      </div>
     </div><!-- About Us Section -->
     <div style="background: rgba(255, 255, 255, 0.3); padding: 48px 32px; border-radius: 16px; margin: 0 -32px; backdrop-filter: blur(10px);">
@@ -374,7 +374,6 @@
 
     document.getElementById('btn-home').addEventListener('click', () => showPage('page-home'));
     document.getElementById('btn-intro').addEventListener('click', () => showPage('page-intro'));
-    document.getElementById('btn-learn-more').addEventListener('click', () => showPage('page-intro'));
 
 
 
@@ -399,5 +398,5 @@
       });
     }
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'99792fca70cfc7d2',t:'MTc2MTk3Njk4Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'99793cf0f078c7d2',t:'MTc2MTk3NzUyMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
