--- a/index.html
+++ b/index.html
@@ -323,11 +323,37 @@
       </ul>
      </div>
     </div><!-- Lý do chọn đề tài -->
-    <div class="card" style="padding: 40px;">
+    <div class="card" style="padding: 40px; margin-bottom: 32px;">
      <h3 style="font-size: 24px; font-weight: 700; color: #667eea; margin-bottom: 24px;">Lý do chọn đề tài</h3>
      <div style="color: #4a5568; line-height: 1.8; font-size: 16px;">
       <p style="margin-bottom: 16px;">Từ năm 2022–2023, GDPT 2018 triển khai toàn quốc, nhấn mạnh phát triển phẩm chất–năng lực và thúc đẩy chuyển đổi số. Ở THPT, ngoài 9 môn bắt buộc, học sinh có chuyên đề tự chọn; từ 2025–2026 mỗi ngày không quá 7 tiết, làm nhu cầu cá nhân hóa TKB và điều chỉnh linh hoạt trở nên cấp thiết.</p>
       <p style="margin-bottom: 16px;">TKB giấy khó cập nhật, thiếu nhắc nhở, dễ trùng/nhầm lịch. Phần mềm <strong>Thời gian biểu mini</strong> khắc phục các hạn chế này: cho phép tự thiết kế và cập nhật tức thì, hỗ trợ nhắc nhở/xuất lịch, hướng tới chia sẻ lịch GV–HS, qua đó nâng cao hiệu quả quản lý và chất lượng học tập theo hướng linh hoạt, bền vững.</p>
+     </div>
+    </div><!-- Câu hỏi nghiên cứu -->
+    <div class="card" style="padding: 40px; margin-bottom: 32px;">
+     <h3 style="font-size: 24px; font-weight: 700; color: #667eea; margin-bottom: 24px;">Câu hỏi nghiên cứu</h3>
+     <div style="color: #4a5568; line-height: 1.8; font-size: 16px;">
+      <p style="margin-bottom: 16px;">Đề tài được thiết kế nhằm trả lời cho các câu hỏi nghiên cứu sau:</p>
+      <ul class="bullet-list" style="color: #4a5568;">
+       <li><strong>Câu hỏi nghiên cứu 1:</strong> Phần mềm thời gian biểu mini là gì?</li>
+       <li><strong>Câu hỏi nghiên cứu 2:</strong> Việc sử dụng Phần mềm này giải quyết được những vấn đề thực tiễn cụ thể nào? Lợi ích khi sử dụng phần mềm.</li>
+       <li><strong>Câu hỏi nghiên cứu 3:</strong> Việc sử dụng phần mềm có làm thay đổi thói quen sinh hoạt, học tập, làm việc của học sinh hay hình thành kĩ năng, phẩm chất nào cho học sinh hay không?</li>
+      </ul>
+     </div>
+    </div><!-- Mục tiêu -->
+    <div class="card" style="padding: 40px;">
+     <h3 style="font-size: 24px; font-weight: 700; color: #667eea; margin-bottom: 24px;">Mục tiêu</h3>
+     <div style="margin-bottom: 32px;">
+      <h4 class="subsection-title">Quản lý thời gian cá nhân hóa</h4>
+      <p style="color: #4a5568; line-height: 1.8; font-size: 16px;">Hỗ trợ HS tối ưu quỹ thời gian ngoài 7 tiết/ngày cho tự học, rèn luyện, môn tự chọn; có to-do list để lập kế hoạch tác vụ.</p>
+     </div>
+     <div style="margin-bottom: 32px;">
+      <h4 class="subsection-title">Chủ động lập kế hoạch tuần</h4>
+      <p style="color: #4a5568; line-height: 1.8; font-size: 16px;">Chuyển từ bị động nhận thông báo sang coi TKB như công cụ học tập cá nhân (đúng việc–đúng lúc–đúng bối cảnh).</p>
+     </div>
+     <div>
+      <h4 class="subsection-title">Tối ưu tự học &amp; kỷ luật</h4>
+      <p style="color: #4a5568; line-height: 1.8; font-size: 16px;">Sắp xếp hợp lý các khoảng tự học để tránh chồng việc, giảm căng thẳng trước kiểm tra; nâng độ tin cậy/tiện dụng, tạo dữ liệu nền cho quản lý–phân bổ, rèn tự quản thời gian và thói quen chèn khoảng nghỉ hợp lý.</p>
      </div>
     </div>
    </div>
@@ -398,5 +424,5 @@
       });
     }
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'99793cf0f078c7d2',t:'MTc2MTk3NzUyMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'997951c3b2ecc7d2',t:'MTc2MTk3ODM3NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
