--- a/index.html
+++ b/index.html
@@ -688,6 +688,140 @@
        <p style="color: #4a5568; font-size: 14px; margin: 0; line-height: 1.5;">Triển khai hệ thống và vận hành</p>
       </div>
      </div>
+    </div><!-- Phương pháp nghiên cứu -->
+    <div class="card" style="padding: 40px; margin-top: 32px;">
+     <h3 style="font-size: 24px; font-weight: 700; color: #667eea; margin-bottom: 32px; text-align: center;">Phương pháp nghiên cứu</h3>
+     <div style="color: #4a5568; line-height: 1.8; font-size: 16px;">
+      <p style="margin-bottom: 16px;">Nghiên cứu sử dụng <strong>phương pháp kết hợp (Mixed-Methods)</strong> giữa nghiên cứu định lượng và nghiên cứu định tính. Các bước thực hiện tuân thủ mô hình vòng lặp phát triển–đánh giá–cải tiến.</p>
+     </div><!-- Mixed Methods Visualization -->
+     <div style="background: #f8fafc; border-radius: 12px; padding: 24px; margin-top: 24px;">
+      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px; max-width: 600px; margin: 0 auto;"><!-- Định lượng -->
+       <div style="background: #e6fffa; border-radius: 8px; padding: 20px; text-align: center;">
+        <div style="font-size: 32px; margin-bottom: 12px;">
+         📊
+        </div>
+        <h4 style="font-size: 16px; font-weight: 600; color: #2d3748; margin-bottom: 8px;">Định lượng</h4>
+        <p style="color: #4a5568; font-size: 13px; margin: 0; line-height: 1.4;">Chỉ số kỹ thuật, hiệu năng, khả dụng, độ tin cậy, truy cập</p>
+       </div><!-- Định tính -->
+       <div style="background: #fef5e7; border-radius: 8px; padding: 20px; text-align: center;">
+        <div style="font-size: 32px; margin-bottom: 12px;">
+         💬
+        </div>
+        <h4 style="font-size: 16px; font-weight: 600; color: #2d3748; margin-bottom: 8px;">Định tính</h4>
+        <p style="color: #4a5568; font-size: 13px; margin: 0; line-height: 1.4;">Phỏng vấn, phản hồi mở từ khảo sát người dùng</p>
+       </div>
+      </div>
+     </div>
+    </div><!-- Nghiên cứu thực tiễn -->
+    <div class="card" style="padding: 40px; margin-top: 32px;">
+     <h3 style="font-size: 24px; font-weight: 700; color: #667eea; margin-bottom: 32px; text-align: center;">Nghiên cứu thực tiễn</h3>
+     <div style="color: #4a5568; line-height: 1.8; font-size: 16px; margin-bottom: 32px;">
+      <p style="margin-bottom: 16px;">Thực hiện thử nghiệm trên học sinh và giáo viên THPT Nguyễn Khuyến (khối 10–12).</p>
+     </div><!-- Thiết kế nghiên cứu -->
+     <div style="background: linear-gradient(135deg, #f8fafc 0%, #e6fffa 100%); border-radius: 16px; padding: 32px; margin-bottom: 32px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);">
+      <div style="text-align: center; margin-bottom: 24px;">
+       <div style="font-size: 32px; margin-bottom: 12px;">
+        🔬
+       </div>
+       <h4 style="font-size: 20px; font-weight: 700; color: #2d3748; margin-bottom: 8px;">Thiết kế nghiên cứu</h4>
+       <p style="color: #4a5568; line-height: 1.6; font-size: 14px; max-width: 500px; margin: 0 auto;">Đánh giá phần mềm Mini-TKB theo ba nhóm tiêu chí chính</p>
+      </div><!-- Ba nhóm tiêu chí - compact -->
+      <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 16px; margin-bottom: 24px; max-width: 600px; margin-left: auto; margin-right: auto;">
+       <div style="background: white; border-radius: 10px; padding: 16px; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.06); border: 1px solid #e2e8f0;">
+        <div style="background: linear-gradient(135deg, #38b2ac, #319795); color: white; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 18px; margin: 0 auto 12px auto;">
+         ⚙️
+        </div>
+        <h5 style="font-size: 13px; font-weight: 600; color: #2d3748; margin-bottom: 6px;">Chất lượng phần mềm</h5>
+        <p style="color: #718096; font-size: 11px; margin: 0; line-height: 1.3;">Hiệu năng, độ tin cậy</p>
+       </div>
+       <div style="background: white; border-radius: 10px; padding: 16px; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.06); border: 1px solid #e2e8f0;">
+        <div style="background: linear-gradient(135deg, #ed8936, #dd6b20); color: white; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 18px; margin: 0 auto 12px auto;">
+         🔧
+        </div>
+        <h5 style="font-size: 13px; font-weight: 600; color: #2d3748; margin-bottom: 6px;">Tính năng phần mềm</h5>
+        <p style="color: #718096; font-size: 11px; margin: 0; line-height: 1.3;">Chức năng, tính đầy đủ</p>
+       </div>
+       <div style="background: white; border-radius: 10px; padding: 16px; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.06); border: 1px solid #e2e8f0;">
+        <div style="background: linear-gradient(135deg, #667eea, #764ba2); color: white; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 18px; margin: 0 auto 12px auto;">
+         👥
+        </div>
+        <h5 style="font-size: 13px; font-weight: 600; color: #2d3748; margin-bottom: 6px;">Trải nghiệm người dùng</h5>
+        <p style="color: #718096; font-size: 11px; margin: 0; line-height: 1.3;">Khả dụng, hài lòng</p>
+       </div>
+      </div><!-- Thông tin mẫu nghiên cứu - compact -->
+      <div style="background: white; border-radius: 12px; padding: 20px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); border: 1px solid #e6fffa;">
+       <div style="text-align: center; margin-bottom: 16px;">
+        <h5 style="font-size: 16px; font-weight: 600; color: #2d3748; margin-bottom: 4px;">Thông tin mẫu nghiên cứu</h5>
+        <p style="color: #718096; font-size: 12px; margin: 0;">Cỡ mẫu và thời gian thực hiện</p>
+       </div>
+       <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px; text-align: center;">
+        <div>
+         <div style="background: linear-gradient(135deg, #667eea, #764ba2); color: white; border-radius: 8px; padding: 12px; margin-bottom: 6px;">
+          <div style="font-size: 20px; font-weight: 700; margin-bottom: 2px;">
+           214
+          </div>
+          <div style="font-size: 9px; opacity: 0.9; font-weight: 500;">
+           TỔNG
+          </div>
+         </div>
+         <p style="color: #4a5568; font-size: 10px; margin: 0; font-weight: 500;">Người tham gia</p>
+        </div>
+        <div>
+         <div style="background: linear-gradient(135deg, #38a169, #2f855a); color: white; border-radius: 8px; padding: 12px; margin-bottom: 6px;">
+          <div style="font-size: 20px; font-weight: 700; margin-bottom: 2px;">
+           10
+          </div>
+          <div style="font-size: 9px; opacity: 0.9; font-weight: 500;">
+           GV
+          </div>
+         </div>
+         <p style="color: #4a5568; font-size: 10px; margin: 0; font-weight: 500;">Giáo viên</p>
+        </div>
+        <div>
+         <div style="background: linear-gradient(135deg, #ed8936, #dd6b20); color: white; border-radius: 8px; padding: 12px; margin-bottom: 6px;">
+          <div style="font-size: 20px; font-weight: 700; margin-bottom: 2px;">
+           204
+          </div>
+          <div style="font-size: 9px; opacity: 0.9; font-weight: 500;">
+           HS
+          </div>
+         </div>
+         <p style="color: #4a5568; font-size: 10px; margin: 0; font-weight: 500;">Học sinh</p>
+        </div>
+        <div>
+         <div style="background: linear-gradient(135deg, #805ad5, #6b46c1); color: white; border-radius: 8px; padding: 12px; margin-bottom: 6px;">
+          <div style="font-size: 16px; font-weight: 700; margin-bottom: 2px;">
+           8-10
+          </div>
+          <div style="font-size: 9px; opacity: 0.9; font-weight: 500;">
+           T2025
+          </div>
+         </div>
+         <p style="color: #4a5568; font-size: 10px; margin: 0; font-weight: 500;">Thời gian</p>
+        </div>
+       </div>
+      </div>
+     </div>
+    </div><!-- Công cụ thu thập dữ liệu -->
+    <div class="card" style="padding: 32px; margin-top: 32px;">
+     <h3 style="font-size: 20px; font-weight: 700; color: #667eea; margin-bottom: 24px; text-align: center;">Công cụ thu thập dữ liệu</h3>
+     <div style="color: #4a5568; line-height: 1.8; font-size: 16px; margin-bottom: 24px; text-align: center;">
+      <p style="margin-bottom: 16px;">Dữ liệu được thu thập qua hai nhóm công cụ chính</p>
+     </div>
+     <div style="display: flex; justify-content: center; gap: 32px; flex-wrap: wrap;">
+      <div style="background: #f0fff4; border: 2px solid #68d391; border-radius: 16px; padding: 24px; display: flex; align-items: center; gap: 12px; min-width: 200px;"><span style="font-size: 24px;">📊</span>
+       <div>
+        <h4 style="color: #2f855a; font-size: 16px; font-weight: 600; margin: 0 0 4px 0;">Công cụ đo trực tuyến</h4>
+        <p style="color: #38a169; font-size: 13px; margin: 0;">Chỉ số hiệu năng, khả dụng</p>
+       </div>
+      </div>
+      <div style="background: #eff6ff; border: 2px solid #60a5fa; border-radius: 16px; padding: 24px; display: flex; align-items: center; gap: 12px; min-width: 200px;"><span style="font-size: 24px;">📝</span>
+       <div>
+        <h4 style="color: #2563eb; font-size: 16px; font-weight: 600; margin: 0 0 4px 0;">Google Forms</h4>
+        <p style="color: #3b82f6; font-size: 13px; margin: 0;">Khảo sát người dùng</p>
+       </div>
+      </div>
+     </div>
     </div>
    </div>
   </div><!-- Page 4: Data -->
@@ -945,5 +1079,5 @@
       });
     }
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'997a85ad97ebc7d2',t:'MTc2MTk5MDk4Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'997b26aa4261c7d2',t:'MTc2MTk5NzU4MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
